feat(dashboard): implement new dashboard layout with market selection and trading chart

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "feed": "^4.2.2",
     "framer-motion": "^11.3.8",
     "geist": "^1.3.1",
+    "lightweight-charts": "4",
     "lucide-react": "0.414.0",
     "markdown-wasm": "^1.2.0",
     "mdx-bundler": "^10.0.2",
