feat(trading): replace TradingViewChart with TradingChart and update market data fetching logic fix(predictions): correct prediction dates and signals in dummy data

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,11 +7,16 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "contentlayer/generated": ["./.contentlayer/generated"]
+      "@/*": [
+        "./src/*"
+      ],
+      "contentlayer/generated": [
+        "./.contentlayer/generated"
+      ]
     },
     "baseUrl": ".",
     "rootDir": ".",
+    "strictNullChecks": true
   },
   "include": [
     "**/*.ts",
@@ -25,5 +30,7 @@
     "contentlayer.config.ts",
     ".contentlayer/generated"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
